--- a/index.html
+++ b/index.html
@@ -93,26 +93,30 @@
                   <div class="aLaIzquierda"> 
                      <img class="logoNaranja" src="./images/generales/logo naranja.png"alt="logo naranja">
                      <div class="palabras">
-                          <p>ALVARITO</p>
-                          <p>DELIVERY</p>
+                          <p class="palabra1">GUIA  DE</p>
+                          <p class="palabra1">COMPRAS</p>
+                          <p>Segui los pasos</p>
                       </div>
                  </div>
                  <div data-aos="fade-up"
                  data-aos-duration="500" class="guiaDePedidos">
+                     <div class="cinta">
+                         <img src="../images/generales/cinta.png" alt="cintaPegada">
+                     </div>
                      <ul>
-                         <li><a href="./pages/pedidos.html#iniciasesion" target="_blank"><img class="logosPedidos" src="./images/generales/logo inicio de sesion.png" alt="inicia sesion"></a></li>
+                         <li><a href="./pages/pedidos.html#iniciasesion" target="_blank"><img id=f1 class="logosPedidos" src="./images/generales/logo inicio de sesion.png" alt="inicia sesion"></a></li>
 
                          <li><img class="logosPedidos2" src="./images/generales/flecha2.png" alt="flecha"></li>
 
-                         <li><a href="./pages/productos.html" target="_blank"><img  class="logosPedidos" src="./images/generales/elegi tus productos logo.png" alt="elegi tus Productos"></a></li>
+                         <li><a href="./pages/productos.html" target="_blank"><img id=f2 class="logosPedidos" src="./images/generales/elegi tus productos logo.png" alt="elegi tus Productos"></a></li>
 
                          <li><img class="logosPedidos2" id="f2" src="./images/generales/flecha2.png" alt="flecha"></li>
 
-                         <li><a href="./pages/pedidos.html" target="_blank"><img class="logosPedidos" src="./images/generales/realiza tu pedido logo.png" alt="realiza tu pedido"></a> </li>
+                         <li><a href="./pages/pedidos.html" target="_blank"><img id=f3 class="logosPedidos" src="./images/generales/realiza tu pedido logo.png" alt="realiza tu pedido"></a> </li>
 
                          <li><img class="logosPedidos2" src="./images/generales/flecha2.png" alt="flecha"></li>
 
-                         <li><a href="./pages/encontranos.html#mapa" target="_blank"><img class="logosPedidos" id="i4" src="./images/generales/espera logo.png" alt="retira tu compra o espera el envio"></a></li>
+                         <li><a href="./pages/encontranos.html#mapa" target="_blank"><img id=f4 class="logosPedidos" id="i4" src="./images/generales/espera logo.png" alt="retira tu compra o espera el envio"></a></li>
                       </ul>
                  </div>
               </div>
@@ -123,7 +127,7 @@
           <!--seccion ofertas-->
           <section class="ofertasBox" id="ofertas">
               <h2>OFERTAS</h2>
-              <p>Hace click en las imagenes para conocer nuestras ofertas </p>
+              <p>Hace click en las imagenes para conocer nuestras ofertas!!! </p>
               <div class="ofertasDiv">
                  <a href="./pages/productos.html#galletaof" target="_blank"><img data-aos="zoom-in-up" class="ofertasImg" src="./images/productos/galletas/galleta2.png" alt="Oferta 1"></a>
                  <a href="./pages/productos.html#almacenof" target="_blank"><img data-aos="zoom-in-up" class="ofertasImg"src="./images/productos/almacen/almacen2.png" alt="oferta2"></a>
@@ -155,34 +159,32 @@
                   </div>
               </div>
          </section>
-         <div class="separadorDePagina">
-            <p> </p>
-          </div>
+
           <!--Seccion Cards-->
          <section class="tarjetaVisita">
             <div data-aos="fade-up"
-            data-aos-duration="500" class="card" style="">
+            data-aos-duration="500" id="card1" class="card" style="">
                 <img src="./images/generales/cardproductos.jpg" class="card-img-top" alt="card productos">
                 <div class="card-body text-center">
-                  <h3 class="card-title">NUESTROS PRODUCTOS</h3>
-                  <p class="card-text">Pasa por nuestra tienda virtual y mira lo que tenemos!</p>
+                  <h3 class="card-title">TIENDA VIRTUAL</h3>
+                  <p class="card-text">Pasa por la tienda virtual y mira lo que tenemos!</p>
                   <a href="./pages/sobre nosotros.html" class="btn btn-custom">Elegi</a>
                 </div>
            </div>
           <div data-aos="fade-up"
-          data-aos-duration="500" class="card" style="">
+          data-aos-duration="500" id="card2" class="card" style="">
                 <img src="./images/generales/cardsobreus.jpg" class="card-img-top" alt="card sobre nosotros">
                 <div class="card-body text-center">
-                  <h3 class="card-title">CONOCE NUESTRA HISTORIA</h3>
+                  <h3 class="card-title">NUESTRA HISTORIA</h3>
                   <p class="card-text">Conocenos, te contamos nuestra historia </p>
                   <a href="./pages/sobre nosotros.html" class="btn btn-custom">Conocenos</a>
                 </div>
            </div>
            <div data-aos="fade-up"
-           data-aos-duration="500" class="card" style="">
+           data-aos-duration="500" id="card3" class="card" style="">
                 <img src="./images/generales/cardencontranos.jpg" class="card-img-top" alt="card encontranos">
                 <div class="card-body text-center">
-                  <h3 class="card-title">ENCONTRANOS AQUI</h3>
+                  <h3 class="card-title">DONDE ESTAMOS?</h3>
                   <p class="card-text">Visitarnos, trabajar con nosotros o comunicarte </p>
                   <a href="./pages/sobre nosotros.html" class="btn btn-custom">Encontranos</a>
          </div>
