--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -80,6 +80,9 @@
                </div>
                <!--franja vertical-->
                <div data-aos="zoom-out-left" class="verticalFranja">
+                <div class="cinta">
+                    <img src="../images/generales/cinta.png" alt="cintaPegada">
+                </div>
                   <p>Ponete en contacto con nosotros, haciendo click en los logos de abajo o visitanos en Ayacucho 386, SMT. </p> 
                   <!--redes en franja vertical-->
                  <div class="redesSociales2">      
