--- a/pages/productos.html
+++ b/pages/productos.html
@@ -90,39 +90,38 @@
                     <div class="guiaDePedidos2">
                         <ul data-aos="fade-up"
                         data-aos-anchor-placement="top-bottom">
-                            <li id="f1"><a href="../pages/pedidos.html#iniciasesion" target="_blank"><img class="logosPedidos" src="../images/generales/logo inicio de sesion.png" alt="inicia sesion"></a></li>
+                            <li ><a href="../pages/pedidos.html#iniciasesion" target="_blank"><img id="f1" class="logosPedidos" src="../images/generales/logo inicio de sesion.png" alt="inicia sesion"></a></li>
                             <li><img class="logosPedidos2" src="../images/generales/flecha2.png" alt="flecha"></li>
-                            <li><a href="../pages/productos.html" target="_blank"><img  class="logosPedidos" src="../images/generales/elegi tus productos logo.png" alt="elegi tus Productos"></a></li>
+                            <li><a href="../pages/productos.html" target="_blank"><img id="f2" class="logosPedidos" src="../images/generales/elegi tus productos logo.png" alt="elegi tus Productos"></a></li>
                             <li><img class="logosPedidos2" id="f2" src="../images/generales/flecha2.png" alt="flecha"></li>
-                            <li><a href="../pages/pedidos.html" target="_blank"><img class="logosPedidos" src="../images/generales/realiza tu pedido logo.png" alt="realiza tu pedido"></a> </li>
+                            <li><a href="../pages/pedidos.html" target="_blank"><img id="f3" class="logosPedidos" src="../images/generales/realiza tu pedido logo.png" alt="realiza tu pedido"></a> </li>
                             <li><img class="logosPedidos2" src="../images/generales/flecha2.png" alt="flecha"></li>
-                            <li><a href="../pages/encontranos.html#mapa" target="_blank"><img class="logosPedidos" src="../images/generales/espera logo.png" alt="retira tu compra o espera el envio"></a></li>
+                            <li><a href="../pages/encontranos.html#mapa" target="_blank"><img id="f4" class="logosPedidos" src="../images/generales/espera logo.png" alt="retira tu compra o espera el envio"></a></li>
                          </ul>
                       </div>
                   </div>
               </div>
          </section>
          <!--seccion grupo de productos-->
+         <h2 class="tituloh2">CATEGORIAS</h2>
          <div class="tiposDeProductosBox">
-              <h2>CATEGORIAS</h2>
               <ul class="listaImagenes">
-                
                    <li> 
                       <a href="#lecheof">
                           <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/lacteosgral.png" alt="lacteos y productos frescos">
-                          <p class="cateletra">LACTEOS Y QUESOS</p>
+                          <p class="cateletra">LACTEOS</p>
                       </a>
                   </li>
                    <li>
                        <a href="#bebidasof">
                           <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/bebidasgral.png" alt="bebidas">
-                          <p class="cateletra">BEBIDAS Y TRAGOS</p>
+                          <p class="cateletra">BEBIDAS</p>
                      </a>
                   </li>
                    <li>
                       <a href="#galletasof">
                           <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/galletasgral.png" alt="galletas, snacks y golosinas">
-                          <p class="cateletra">GALLETAS Y GOLOSINAS</p>
+                          <p class="cateletra">GALLETAS</p>
                       </a>
                   </li>
                    <li>
@@ -134,13 +133,13 @@
                    <li>
                       <a href="#jabon1">
                           <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/limpiezagral.png" alt="articulos de limpieza e higiene">
-                          <p class="cateletra">LIMPIEZA E HIGIENE</p> 
+                          <p class="cateletra">LIMPIEZA</p> 
                       </a>
                    </li>
                    <li>
                        <a href="#nuez">
                           <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/frutasgral.png" alt="frutas y verduras">
-                          <p class="cateletra"> FRUTAS Y VERDURAS</p>
+                          <p class="cateletra"> FRUTAS/VERDURAS</p>
                        </a>
                   </li>
               </ul>
