--- a/pages/sobre nosotros.html
+++ b/pages/sobre nosotros.html
@@ -74,14 +74,19 @@
           <div class="sobreNosotros">
               <!--titulo sobre nosotros -->
               <div class="tituloSN">
-                  <h2> TE CONTAMOS NUESTRA HISTORIA
+                  <h2 data-aos="fade-down"
+                  data-aos-duration="1000"> TE CONTAMOS NUESTRA HISTORIA
                   </h2>
               </div>
                <!--franja vertical -->
               <div data-aos="fade-down"
               data-aos-duration="1000" class="franjaV">
+                  <img ata-aos="fade-down"
+                  data-aos-duration="1000"class="chinche1" src="../images/generales/chinche.png" alt="chinche">
                   <img data-aos="fade-up-left" src="../images/sobre nosotros/alvarito.png " alt="Foto de Alvarito">
+                  <img class="chinche2" src="../images/generales/chinche.png" alt="chinche">
                   <img data-aos="fade-up-left" src="../images/sobre nosotros/market.png" alt="Foto de local">
+                  <img class="chinche3" src="../images/generales/chinche.png" alt="chinche">
                   <img data-aos="fade-up-left" src="../images/sobre nosotros/grupo.png" alt="Foto del equipo">
               </div>
                <!--texto introducitorio -->
