--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                  <div data-aos="fade-up"
                  data-aos-duration="500" class="guiaDePedidos">
                      <div class="cinta">
-                         <img src="../images/generales/cinta.png" alt="cintaPegada">
+                         <img src="./images/generales/cinta.png" alt="cintaPegada">
                      </div>
                      <ul>
                          <li><a href="./pages/pedidos.html#iniciasesion" target="_blank"><img id=f1 class="logosPedidos" src="./images/generales/logo inicio de sesion.png" alt="inicia sesion"></a></li>
