--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -85,7 +85,7 @@
                  <div class="cinta">
                       <img src="../images/generales/cinta.png" alt="cintaPegada">
                  </div>
-                 <h2>PEDI LO QUE QUIERAS</h2>
+                 <h2>PEDI  LO QUE QUIERAS</h2>
                  <div class="formularios">
                     <form class="formIzquierda" >
                         <div>
@@ -124,7 +124,8 @@
                  </div>
               </div>
               <!--inicio de sesion -->
-              <div data-aos="fade-right" class="iniciaSesion">
+              <div data-aos="fade-up"
+              data-aos-duration="500" class="iniciaSesion">
                   <h2 id="iniciasesion"> INICIA SESION
                   </h2>
                   <section class="iSFormulario">
@@ -142,7 +143,8 @@
                  </section>
               </div>
               <!--suscribite -->
-              <div data-aos="fade-left" class="suscribite">
+              <div data-aos="fade-up"
+              data-aos-duration="500" class="suscribite">
                   <h2 id="suscribite"> SUSCRIBITE
                  </h2>
                  <section class="sFormulario">
