--- a/pages/sobre nosotros.html
+++ b/pages/sobre nosotros.html
@@ -79,11 +79,13 @@
                   </h2>
               </div>
                <!--franja vertical -->
-              <div data-aos="fade-down"
-              data-aos-duration="1000" class="franjaV">
-                  <img data-aos="fade-up-left" src="../images/sobre nosotros/alvarito.png " alt="Foto de Alvarito">
-                  <img data-aos="fade-up-left" src="../images/sobre nosotros/market.png" alt="Foto de local">
-                  <img data-aos="fade-up-left" src="../images/sobre nosotros/grupo.png" alt="Foto del equipo">
+              <div class="franjaV">
+                  <img data-aos="fade-down"
+                  data-aos-duration="1000"  src="../images/sobre nosotros/alvarito.png " alt="Foto de Alvarito">
+                  <img data-aos="fade-down"
+                  data-aos-duration="1000"  src="../images/sobre nosotros/market.png" alt="Foto de local">
+                  <img data-aos="fade-down"
+                  data-aos-duration="1000"  src="../images/sobre nosotros/grupo.png" alt="Foto del equipo">
               </div>
                <!--texto introducitorio -->
               <div class="texto1">
