--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
      <link rel="shortcut icon" href="./images/favico/favicon.ico">
      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
      <!--meta seo-->
-     <meta name="description" content="Descubre Miniservice Alvarito en San Miguel de Tucuman: una tienda local fundada por Álvaro, un apasionado de la buena comida. Ofrecemos una variedad de alimentos frescos y de calidad, directamente de productores locales al mejor precio. Veni a visitarnos o pedi lo que quieras y te lo llevamos a tu casa.">
+     <meta name="description" content="Descubre Miniservice Alvarito en San Miguel de Tucumán: una tienda local fundada por Álvaro, un apasionado de la buena comida. Ofrecemos una variedad de alimentos frescos y de calidad, directamente de productores locales al mejor precio. Ven a visitarnos o pide lo que quieras y te lo llevamos a tu casa.">
      <!--keywords seo-->
-     <meta name="keywords" content="Miniservice Alvarito, alimentos frescos, productos locales, tienda de alimentos, Tucumán, comprar alimentos online, comunidad, eventos especiales, calidad de productos, Álvaro, envios, llevamos a tu casa">
+     <meta name="keywords" content="Miniservice Alvarito: alimentos frescos, productos locales, tienda de alimentos en Tucumán. Compra alimentos online y disfruta de nuestra comunidad, eventos especiales y la calidad de nuestros productos. Fundada por Álvaro, te llevamos tus compras a casa.">
      <!--Dependencias de Bootstrap-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
      <!--AOS-->
@@ -45,12 +45,12 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    MENU
+                                    MENÚ
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./pages/productos.html">PRODUCTOS</a></li>
                                     <li><a class="dropdown-item" href="./pages/pedidos.html">PEDIDOS</a></li>
-                                    <li><a class="dropdown-item" href="./pages/encontranos.html">ENCONTRANOS AQUI</a></li>
+                                    <li><a class="dropdown-item" href="./pages/encontranos.html">ENCUÉNTRANOS AQUÍ</a></li>
                                     <li><a class="dropdown-item" href="./pages/sobre nosotros.html">SOBRE NOSOTROS</a></li>
                                 </ul>
                             </li>
@@ -79,9 +79,9 @@
               </div>
               <!--botones iniciosuscripcion-->
               <div class="inicioSuscripcion">
-                 <a class="boton" href="./pages/pedidos.html#iniciasesion"target="_blank"> Inicio de sesion</a>
+                 <a class="boton" href="./pages/pedidos.html#iniciasesion"target="_blank"> Inicio de sesión</a>
             
-                 <a class="boton" href="./pages/pedidos.html#suscribite"target="_blank">Suscribite</a>
+                 <a class="boton" href="./pages/pedidos.html#suscribite"target="_blank">Suscríbete</a>
               </div>
           </section>
           <div class="separadorDePagina">
@@ -93,9 +93,9 @@
                   <div class="aLaIzquierda"> 
                      <img class="logoNaranja" src="./images/generales/logo naranja.png"alt="logo naranja">
                      <div class="palabras">
-                          <p class="palabra1">GUIA  DE</p>
+                          <p class="palabra1">GUÍA  DE</p>
                           <p class="palabra1">COMPRAS</p>
-                          <p>Segui los pasos</p>
+                          <p>SeguÍ los pasos</p>
                       </div>
                  </div>
                  <div data-aos="fade-up"
@@ -127,7 +127,7 @@
           <!--seccion ofertas-->
           <section class="ofertasBox" id="ofertas">
               <h2>OFERTAS</h2>
-              <p>Hace click en las imagenes para conocer nuestras ofertas!!! </p>
+              <p>Haz click en las imagenes para conocer nuestras ofertas!!! </p>
               <div class="ofertasDiv">
                  <a href="./pages/productos.html#galletaof" target="_blank"><img data-aos="zoom-in-up" class="ofertasImg" src="./images/productos/galletas/galleta2.png" alt="Oferta 1"></a>
                  <a href="./pages/productos.html#almacenof" target="_blank"><img data-aos="zoom-in-up" class="ofertasImg"src="./images/productos/almacen/almacen2.png" alt="oferta2"></a>
@@ -142,7 +142,7 @@
           <!--Seccion Recetas-->
           <section class="recetasBox">
               <h2>RECETAS</h2>
-              <p> Hace estas recetas con nuestros productos
+              <p> Haz estas recetas con nuestros productos!
               </p>
               <div class="iframe">
                  <div class="ratio ratio-16x9">
@@ -168,7 +168,7 @@
                 <div class="card-body text-center">
                   <h3 class="card-title">TIENDA VIRTUAL</h3>
                   <p class="card-text">Pasa por la tienda virtual y mira lo que tenemos!</p>
-                  <a href="./pages/sobre nosotros.html" class="btn btn-custom">Elegi</a>
+                  <a href="./pages/sobre nosotros.html" class="btn btn-custom">Elegí</a>
                 </div>
            </div>
           <div data-aos="fade-up"
@@ -176,17 +176,17 @@
                 <img src="./images/generales/cardsobreus.jpg" class="card-img-top" alt="card sobre nosotros">
                 <div class="card-body text-center">
                   <h3 class="card-title">NUESTRA HISTORIA</h3>
-                  <p class="card-text">Conocenos, te contamos nuestra historia </p>
-                  <a href="./pages/sobre nosotros.html" class="btn btn-custom">Conocenos</a>
+                  <p class="card-text">Conócenos, te contamos nuestra historia. </p>
+                  <a href="./pages/sobre nosotros.html" class="btn btn-custom">Conócenos</a>
                 </div>
            </div>
            <div data-aos="fade-up"
            data-aos-duration="500" id="card3" class="card" style="">
                 <img src="./images/generales/cardencontranos.jpg" class="card-img-top" alt="card encontranos">
                 <div class="card-body text-center">
-                  <h3 class="card-title">DONDE ESTAMOS?</h3>
-                  <p class="card-text">Visitarnos, trabajar con nosotros o comunicarte </p>
-                  <a href="./pages/sobre nosotros.html" class="btn btn-custom">Encontranos</a>
+                  <h3 class="card-title">DÓNDE ESTAMOS?</h3>
+                  <p class="card-text">Visitános, trabajá con nosotros o comunicate. </p>
+                  <a href="./pages/sobre nosotros.html" class="btn btn-custom">Encontrános</a>
          </div>
 
          </section>
