--- a/pages/sobre nosotros.html
+++ b/pages/sobre nosotros.html
@@ -8,7 +8,7 @@
      <link rel="shortcut icon" href="../images/favico/favicon.ico">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!--meta seo-->
-     <meta name="description" content="Conoce la historia de Miniservice Alvarito. Descubre cómo Álvaro, un apasionado de la buena comida, creó este market local para ofrecer productos frescos y de calidad directamente de los productores locales. Únete a nuestra comunidad y disfruta de eventos especiales y talleres de cocina.">
+     <meta name="description" content="Descubre la historia de Miniservice Alvarito. Conoce cómo Álvaro, un apasionado de la buena comida, creó este market local para ofrecer productos frescos y de calidad directamente de los productores locales. Únete a nuestra comunidad y disfruta de eventos especiales y talleres de cocina.">
      <!--keywords seo-->
      <meta name="keywords" content="Miniservice, Alvarito, sobre nosotros, historia, Álvaro fundador, tienda de alimentos, supermercado, productos frescos, productos locales, Tucumán, comunidad, eventos especiales, talleres de cocina, emprendedor, calidad de productos">
       <!--Dependencias de Bootstrap-->
