--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./pages/productos.html">PRODUCTOS</a></li>
                                     <li><a class="dropdown-item" href="./pages/pedidos.html">PEDIDOS</a></li>
-                                    <li><a class="dropdown-item" href="./pages/encontranos.html">ENCUÉNTRANOS AQUÍ</a></li>
+                                    <li><a class="dropdown-item" href="./pages/encontranos.html">ENCONTRANOS AQUÍ</a></li>
                                     <li><a class="dropdown-item" href="./pages/sobre nosotros.html">SOBRE NOSOTROS</a></li>
                                 </ul>
                             </li>
@@ -80,7 +80,6 @@
               <!--botones iniciosuscripcion-->
               <div class="inicioSuscripcion">
                  <a class="boton" href="./pages/pedidos.html#iniciasesion"target="_blank"> Inicio de sesión</a>
-            
                  <a class="boton" href="./pages/pedidos.html#suscribite"target="_blank">Suscríbete</a>
               </div>
           </section>
@@ -185,7 +184,7 @@
                 <img src="./images/generales/cardencontranos.jpg" class="card-img-top" alt="card encontranos">
                 <div class="card-body text-center">
                   <h3 class="card-title">DÓNDE ESTAMOS?</h3>
-                  <p class="card-text">Visitános, trabajá con nosotros o comunicate. </p>
+                  <p class="card-text">Visitános, trabaja con nosotros o comunicate. </p>
                   <a href="./pages/sobre nosotros.html" class="btn btn-custom">Encontrános</a>
          </div>
 
