--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!--title seo-->
-     <title>Alvarito Market | Visitanos en nuestro local</title>
+     <title>Alvarito Market | Visítanos en nuestro local.</title>
      <link rel="shortcut icon" href="../images/favico/favicon.ico">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!--meta seo-->
@@ -48,12 +48,12 @@
                              </li>
                              <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
-                                     MENU
+                                    MENÚ
                                 </a>
                                 <ul class="dropdown-menu">
                                      <li><a class="dropdown-item" href="../pages/productos.html">PRODUCTOS</a></li>
                                      <li><a class="dropdown-item" href="pedidos.html">PEDIDOS</a></li>
-                                     <li><a class="dropdown-item" href="../pages/encontranos.html">ENCONTRANOS AQUI</a></li>
+                                     <li><a class="dropdown-item" href="../pages/encontranos.html">ENCONTRANOS AQUÍ</a></li>
                                      <li><a class="dropdown-item" href="../pages/sobre nosotros.html">SOBRE NOSOTROS</a></li>
                                 </ul>
                              </li>
@@ -75,15 +75,14 @@
                <!--titulo encontranos -->
                <div class="tituloEncontrarnos">
                   <h2 data-aos="fade-down"
-                  data-aos-duration="1000" >ENCONTRA MI TIENDA AQUI </h2>
-                  <p class="cuatro20">ENCONTROS AQUI</p>
+                  data-aos-duration="1000" >ENCUENTRA MI TIENDA AQUÍ</h2>
                </div>
                <!--franja vertical-->
                <div data-aos="zoom-out-left" class="verticalFranja">
                 <div class="cinta">
                     <img src="../images/generales/cinta.png" alt="cintaPegada">
                 </div>
-                  <p>Ponete en contacto con nosotros, haciendo click en los logos de abajo o visitanos en Ayacucho 386, SMT. </p> 
+                  <p>Ponete en contacto con nosotros, haciendo click en los logos de abajo o visítanos en Ayacucho 386, SMT. </p> 
                   <!--redes en franja vertical-->
                  <div class="redesSociales2">      
                       <ul>
@@ -112,8 +111,8 @@
                <div data-aos="fade-up"
                data-aos-duration="500" class="horarios">
                   <h2>HORARIOS</h2>
-                  <p>Lunes a Sabados</p>
-                  <p class="p2">de 7 am a 11pm</p>
+                  <p>Lunes a Sábado</p>
+                  <p class="p2">de 7am a 11pm.</p>
                </div>
                 <!--trabaja -->
                <div data-aos="fade-up"
@@ -136,7 +135,7 @@
            <a href="../index.html"><img class="logoFooter" src="../images/favico/Icono.ico" alt="logo footer"></a>
         </div>
         <div class="redesSociales">   
-            <p>SEGUINOS EN NUESTRAS REDES</p>  
+            <p>SEGUÍNOS EN NUESTRAS REDES</p>  
             <div class="img">
                 <a href="https://www.instagram.com/belu.gs/" target="_blank"><img class="imgRedes" src="../images/generales/insta.png" alt="instagram"></a>
                 <a href="https://www.facebook.com/gramajosoriamb"  target="_blank"><img class="imgRedes"src="../images/generales/facebook.png"></a>
