--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!--title seo-->
-     <title>Alvarito Market | Hace tu Pedido Aqui y te lo Llevamos a tu Casa</title>
+     <title>Alvarito Market | Hacé tu Pedido Acá y te lo Llevamos a tu Casa.</title>
      <link rel="shortcut icon" href="../images/favico/favicon.ico">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!--meta seo-->
@@ -50,12 +50,12 @@
                             </li>
                             <li class="nav-item dropdown">
                                <a class="nav-link dropdown-toggle" href="#" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
-                                  MENU
+                                MENÚ
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="../pages/productos.html">PRODUCTOS</a></li>
                                     <li><a class="dropdown-item" href="../pages/pedidos.html">PEDIDOS</a></li>
-                                    <li><a class="dropdown-item" href="../pages/encontranos.html">ENCONTRANOS AQUI</a></li>
+                                    <li><a class="dropdown-item" href="../pages/encontranos.html">ENCONTRANOS AQUÍ</a></li>
                                     <li><a class="dropdown-item" href="../pages/sobre nosotros.html">SOBRE NOSOTROS</a></li>
                                 </ul>
                             </li>
@@ -77,7 +77,7 @@
              <!--titulo pedidos -->
              <div class="tituloPedidos">
                   <h2 data-aos="fade-down"
-                  data-aos-duration="1000" > HACE TU PEDIDO
+                  data-aos-duration="1000" > HACÉ TU PEDIDO
                   </h2>
               </div>
               <!--formulario pedidos -->
@@ -85,7 +85,7 @@
                  <div class="cinta">
                       <img src="../images/generales/cinta.png" alt="cintaPegada">
                  </div>
-                 <h2>PEDI  LO QUE QUIERAS</h2>
+                 <h2>PEDÍ LO QUE QUIERAS</h2>
                  <div class="formularios">
                     <form class="formIzquierda" >
                         <div>
@@ -105,12 +105,12 @@
                             <input  type="tel" name="phone" placeholder="Escribe tu numero de celular">
                         </div>
                         <div>
-                            <label for="address"> Direccion:</label>
+                            <label for="address"> Dirección:</label>
                             <input type="text" name="address" placeholder="Escribe tu direccion">
                         </div>
                         <div>
                             <label for="envio o retiro"></label>
-                            <input type="checkbox" name="envio o retiro" value="retiro"> Retiro del local
+                            <input type="checkbox" name="envio o retiro" value="retiro"> Retiro en el local
                             <input type="checkbox" name="envio o retiro" value="retiro"> Envio a casa
                         </div>
                    </form>
@@ -126,7 +126,7 @@
               <!--inicio de sesion -->
               <div data-aos="fade-up"
               data-aos-duration="500" class="iniciaSesion">
-                  <h2 id="iniciasesion"> INICIA SESION
+                  <h2 id="iniciasesion">INICIA SESIÓN
                   </h2>
                   <section class="iSFormulario">
                       <form>
@@ -139,7 +139,7 @@
                               <input type="password" class="form-control" id="exampleInputPassword1">
                           </div>
                       </form>
-                      <button type="submit" class="btn btn-primary">Iniciar sesion</button>
+                      <button type="submit" class="btn btn-primary">Iniciar sesión</button>
                  </section>
               </div>
               <!--suscribite -->
