--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!--title seo-->
-     <title>Alvarito Market | Productos Frescos</title>
+     <title>Alvarito Market | Productos Frescos.</title>
      <link rel="shortcut icon" href="../images/favico/favicon.ico">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!--meta seo-->
@@ -48,12 +48,12 @@
                              </li>
                              <li class="nav-item dropdown">
                                   <a class="nav-link dropdown-toggle" href="#" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
-                                     MENU
+                                    MENÚ
                                   </a>
                                  <ul class="dropdown-menu">
                                       <li><a class="dropdown-item" href="../pages/productos.html">PRODUCTOS</a></li>
                                       <li><a class="dropdown-item" href="../pages/pedidos.html">PEDIDOS</a></li>
-                                      <li><a class="dropdown-item" href="../pages/encontranos.html">ENCONTRANOS AQUI</a></li>
+                                      <li><a class="dropdown-item" href="../pages/encontranos.html">ENCONTRANOS AQUÍ</a></li>
                                       <li><a class="dropdown-item" href="../pages/sobre nosotros.html">SOBRE NOSOTROS</a></li>
                                  </ul>
                              </li>
@@ -82,8 +82,8 @@
                      data-aos-duration="1000" class="h2Productos">PRODUCTOS</h2>
                  </div>
                   <div class="inSus">
-                       <a class="botonIs" href="../pages/pedidos.html#iniciasesion"target="_blank">Inicio de sesion</a>
-                       <a class="botonIs" href="../pages/pedidos.html#suscribite"target="_blank">Suscribite</a>
+                       <a class="botonIs" href="../pages/pedidos.html#iniciasesion"target="_blank">Inicio de sesión</a>
+                       <a class="botonIs" href="../pages/pedidos.html#suscribite"target="_blank">Suscríbete</a>
                   </div>
                   <!--Seccion guia de pedidos-->
                   <div class="pedidoBox">
@@ -103,13 +103,13 @@
               </div>
          </section>
          <!--seccion grupo de productos-->
-         <h2 class="tituloh2">CATEGORIAS</h2>
+         <h2 class="tituloh2">CATEGORÍAS</h2>
          <div class="tiposDeProductosBox">
               <ul class="listaImagenes">
                    <li> 
                       <a href="#lecheof">
                           <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/lacteosgral.png" alt="lacteos y productos frescos">
-                          <p class="cateletra">LACTEOS</p>
+                          <p class="cateletra">LÁCTEOS</p>
                       </a>
                   </li>
                    <li>
@@ -127,7 +127,7 @@
                    <li>
                       <a href="#almacenof">
                           <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/almacengral.png" alt="almacen y panaderia">
-                          <p class="cateletra">ALMACEN</p>
+                          <p class="cateletra">ALMACÉN</p>
                       </a>
                    </li>
                    <li>
@@ -139,14 +139,14 @@
                    <li>
                        <a href="#nuez">
                           <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/frutasgral.png" alt="frutas y verduras">
-                          <p class="cateletra"> FRUTAS/VERDURAS</p>
+                          <p class="cateletra">FRUTAS/VERDURAS</p>
                        </a>
                   </li>
               </ul>
          </div>
          <!--seccion productos clasificados-->
          <section class="listadoDeProductos">
-              <h2> LISTADOS DE PRODUCTOS</h2>
+              <h2>LISTADOS DE PRODUCTOS</h2>
               <!--Galletas-->
               <div class="galletas" id="galletaof">
                   <h3>GALLETAS, SNACKS, GOLOSINAS Y CHOCOLATES
@@ -156,35 +156,35 @@
                       <div class="carousel-item active">
                          <img class="imagenProducto" src="../images/productos/galletas/galleta1.png" class="d-block w-100" alt="foto galleta 1">
                          <div class="carousel-caption d-none d-md-block">
-                             <h5>Galleta Chips Ahoy</h5>
+                             <h5>Galletas Chips Ahoy</h5>
                              <p>$500.</p>
                          </div>
                       </div>
                       <div class="carousel-item">
                           <img class="imagenProducto" src="../images/productos/galletas/galleta2.png" class="d-block w-100" alt="foto galleta 2">
                           <div class="carousel-caption d-none d-md-block">
-                              <h5>Galleta Chocolate Tentacion</h5>
+                              <h5>Galletas Chocolate Tentación</h5>
                               <p>$380.</p>
                           </div>
                       </div>
                       <div class="carousel-item">
                           <img class="imagenProducto" src="../images/productos/galletas/galleta3.png" class="d-block w-100" alt="foto galleta 3">
                           <div class="carousel-caption d-none d-md-block">
-                              <h5>Galleta Avena y Girasol</h5>
+                              <h5>Galletas de Avena y Girasol</h5>
                               <p>$320.</p>
                           </div>
                       </div>
                       <div class="carousel-item">
                           <img class="imagenProducto" src="../images/productos/galletas/galleta4.png" class="d-block w-100" alt="foto galleta 4">
                           <div class="carousel-caption d-none d-md-block">
-                              <h5>Galleta de Calabaza</h5>
+                              <h5>Galletas de Calabaza</h5>
                               <p>$550.</p>
                           </div>
                       </div>
                       <div class="carousel-item">
                           <img class="imagenProducto" src="../images/productos/galletas/galleta5.png" class="d-block w-100" alt="foto galleta 5">
                           <div class="carousel-caption d-none d-md-block">
-                            <h5>Galleta Chocolate y Curcuma</h5>
+                            <h5>Galletas de Chocolate y Cúrcuma</h5>
                             <p>$400.</p>
                         </div>
                       </div>
@@ -201,7 +201,7 @@
               </div>
               <!--Lacteos-->
               <div class="lacteos" id="lecheof">
-                  <h3> LACTEOS Y PRODUCTOS FRESCOS</h3>
+                  <h3>LÁCTEOS Y PRODUCTOS FRESCOS</h3>
                   <div id="dairy" class="carousel slide carousel-fade">
                      <div class="carousel-inner">
                          <div class="carousel-item active">
@@ -252,41 +252,41 @@
              </div>  
                 <!--Bebidas-->
              <div class="bebidas" id="bebidasof">
-                  <h3> BEBIDAS </h3>
+                  <h3>BEBIDAS</h3>
                   <div id="drinks" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="imagenProducto" src="../images/productos/bebidas/bebida1.png" class="d-block w-100" alt="bebida1">
                              <div class="carousel-caption d-none d-md-block">
-                                 <h5>Leche La Vaquita</h5>
+                                 <h5>Bebida Anana y Lima</h5>
                                  <p>$1260.</p>
                              </div>
                          </div>
                          <div class="carousel-item">
                               <img class="imagenProducto" src="../images/productos/bebidas/bebidas2.png" class="d-block w-100" alt="bebida2">
                               <div class="carousel-caption d-none d-md-block">
-                                 <h5>Yogur La Vaquita</h5>
+                                 <h5>Mule de pomelo</h5>
                                  <p>$750.</p>
                               </div>
                           </div>
                           <div class="carousel-item">
                              <img class="imagenProducto" src="../images/productos/bebidas/bebida3.png" class="d-block w-100" alt="bebida3">
                              <div class="carousel-caption d-none d-md-block">
-                                 <h5>Queso Especias</h5>
+                                 <h5>Jugo de Arandano</h5>
                                  <p>$3590.</p>
                             </div>
                          </div>
                           <div class="carousel-item">
                              <img class="imagenProducto" src="../images/productos/bebidas/bebida4.png" class="d-block w-100" alt="bebida4">
                              <div class="carousel-caption d-none d-md-block">
-                                 <h5>Queso Brie</h5>
+                                 <h5>Bebida Hot and spicy</h5>
                                  <p>$4620.</p>
                              </div>
                          </div>
                          <div class="carousel-item">
                            <img class="imagenProducto" src="../images/productos/bebidas/bebida5.png" class="d-block w-100" alt="bebida5">
                            <div class="carousel-caption d-none d-md-block">
-                               <h5>Queso Ricotta</h5>
+                               <h5>Cocktail</h5>
                                <p>$2080.</p>
                            </div>
                        </div>
@@ -303,7 +303,7 @@
              </div>  
                 <!--almacen-->
               <div class="almacen" id="almacenof">
-                  <h3> ALMACEN Y PANADERIA </h3>
+                  <h3>ALMACÉN Y PANADERÍA</h3>
                   <div id="grocery" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -323,7 +323,7 @@
                           <div class="carousel-item">
                              <img class="imagenProducto" src="../images/productos/almacen/almacen2.png" class="d-block w-100" alt="almacen3">
                              <div class="carousel-caption d-none d-md-block">
-                                 <h5>Noquis Frescos</h5>
+                                 <h5>Ñoquis Frescos</h5>
                                  <p>$390.</p>
                             </div>
                          </div>
@@ -360,14 +360,14 @@
                         <div class="carousel-item active">
                             <img class="imagenProducto" src="../images/productos/frutas/ajies.png" class="d-block w-100" alt="frutas1">
                              <div class="carousel-caption d-none d-md-block">
-                                 <h5>Ajies</h5>
+                                 <h5>Ajíes</h5>
                                  <p>$60.</p>
                              </div>
                          </div>
                          <div class="carousel-item">
                              <img class="imagenProducto" src="../images/productos/frutas/esparragos.png" class="d-block w-100" alt="frutas2">
                              <div class="carousel-caption d-none d-md-block">
-                                 <h5>Esparragos</h5>
+                                 <h5>Espárragos</h5>
                                  <p>$80.</p>
                               </div>
                           </div>
@@ -381,7 +381,7 @@
                           <div class="carousel-item">
                              <img class="imagenProducto" src="../images/productos/frutas/nuezpng.png" class="d-block w-100" alt="frutas4">
                              <div class="carousel-caption d-none d-md-block">
-                                 <h5>Nuez Garrapinada</h5>
+                                 <h5>Nuez Garrapiñada</h5>
                                  <p>$120.</p>
                              </div>
                          </div>
@@ -405,7 +405,7 @@
              </div>  
              <!--limpieza-->
              <div class="limpieza" id="jabon1">
-                 <h3> LIMPIEZA Y ARTICULOS DE HIGIENE </h3>
+                 <h3>LIMPIEZA Y ARTÍCULOS DE HIGIENE</h3>
                  <div id="clean" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -425,7 +425,7 @@
                           <div class="carousel-item">
                              <img class="imagenProducto" src="../images/productos/limpieza/jabon3.png" class="d-block w-100" alt="limpieza3">
                              <div class="carousel-caption d-none d-md-block">
-                                 <h5>Jabon Liquido</h5>
+                                 <h5>Jabón Líquido</h5>
                                  <p>$300.</p>
                             </div>
                          </div>
@@ -458,7 +458,7 @@
          <!--ir a pagina pedidos-->
          <section class="irAPedidos">
             <p>Ya terminaste de elegir?</p>
-            <a class="boton" href="../pages/pedidos.html"target="_blank">Hace tu Pedido aqui!</a>
+            <a class="boton" href="../pages/pedidos.html"target="_blank">Hacé tu pedido aquí!</a>
          </section>
       </main> 
       
