--- a/pages/sobre nosotros.html
+++ b/pages/sobre nosotros.html
@@ -48,12 +48,12 @@
                              </li>
                              <li class="nav-item dropdown">
                                   <a class="nav-link dropdown-toggle" href="#" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
-                                     MENU
+                                     MENÚ
                                   </a>
                                   <ul class="dropdown-menu">
                                       <li><a class="dropdown-item" href="../pages/productos.html">PRODUCTOS</a></li>
                                       <li><a class="dropdown-item" href="../pages/pedidos.html">PEDIDOS</a></li>
-                                      <li><a class="dropdown-item" href="../pages/encontranos.html">ENCONTRANOS AQUI</a></li>
+                                      <li><a class="dropdown-item" href="../pages/encontranos.html">ENCUÉNTRANOS AQUÍ</a></li>
                                       <li><a class="dropdown-item" href="../pages/sobre nosotros.html">SOBRE NOSOTROS</a></li>
                                   </ul>
                               </li>
@@ -75,7 +75,7 @@
               <!--titulo sobre nosotros -->
               <div class="tituloSN">
                   <h2 data-aos="fade-down"
-                  data-aos-duration="1000"> TE CONTAMOS NUESTRA HISTORIA
+                  data-aos-duration="1000">TE CONTAMOS NUESTRA HISTORIA
                   </h2>
               </div>
                <!--franja vertical -->
@@ -122,19 +122,19 @@
                         data-aos-easing="ease-in-sine" class="str"> SOSTEBINILIDAD:</p><p> Nos preocupamos por el medio ambiente, por lo que buscamos prácticas sostenibles en nuestra operación y en la selección de productos.</p></li>
                       <li> <p data-aos="fade-right"
                         data-aos-offset="300"
-                        data-aos-easing="ease-in-sine" class="str"> PASION POR LA COMIDA:</p><p> Nos apasiona la buena comida y queremos compartir esa pasión con nuestros clientes.</p></li>
+                        data-aos-easing="ease-in-sine" class="str"> PASIÓN POR LA COMIDA:</p><p> Nos apasiona la buena comida y queremos compartir esa pasión con nuestros clientes.</p></li>
                       <li> <p data-aos="fade-right"
                         data-aos-offset="300"
                         data-aos-easing="ease-in-sine" class="str">COMUNIDAD:</p><p> Creamos un espacio de encuentro para la comunidad, donde puedan disfrutar y aprender sobre alimentos frescos y saludables.</p></li>
                       <li> <p data-aos="fade-right"
                         data-aos-offset="300"
-                        data-aos-easing="ease-in-sine" class="str">INNOVACION:</p><p> Buscamos constantemente nuevas formas de mejorar y ofrecer experiencias únicas a nuestros clientes.</p></li>
+                        data-aos-easing="ease-in-sine" class="str">INNOVACIÓN:</p><p> Buscamos constantemente nuevas formas de mejorar y ofrecer experiencias únicas a nuestros clientes.</p></li>
                       <li> <p data-aos="fade-right"
                         data-aos-offset="300"
                         data-aos-easing="ease-in-sine" class="str">RESPONSABILIDAD: </p><p> Nos responsabilizamos por el impacto de nuestras acciones en la comunidad y en el medio ambiente.</p></li>
                       <li> <p data-aos="fade-right"
                         data-aos-offset="300"
-                        data-aos-easing="ease-in-sine" class="str">DIVERSIDAD:</p><p> Valoramos la diversidad en todos sus aspectos y buscamos reflejarla en nuestra oferta de productos y en nuestro equipo </p></li>
+                        data-aos-easing="ease-in-sine" class="str">DIVERSIDAD:</p><p> Valoramos la diversidad en todos sus aspectos y buscamos reflejarla en nuestra oferta de productos y en nuestro equipo.</p></li>
                   </ul>
               </div> 
           </div>
