--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="card-body text-center">
                   <h3 class="card-title">TIENDA VIRTUAL</h3>
                   <p class="card-text">Pasa por la tienda virtual y mira lo que tenemos!</p>
-                  <a href="./pages/sobre nosotros.html" class="btn btn-custom">Elegí</a>
+                  <a href="./pages/productos.html" target="_blank" class="btn btn-custom">Elegí</a>
                 </div>
            </div>
           <div data-aos="fade-up"
@@ -176,7 +176,7 @@
                 <div class="card-body text-center">
                   <h3 class="card-title">NUESTRA HISTORIA</h3>
                   <p class="card-text">Conócenos, te contamos nuestra historia. </p>
-                  <a href="./pages/sobre nosotros.html" class="btn btn-custom">Conócenos</a>
+                  <a href="./pages/sobre nosotros.html" target="_blank" class="btn btn-custom">Conócenos</a>
                 </div>
            </div>
            <div data-aos="fade-up"
@@ -185,7 +185,7 @@
                 <div class="card-body text-center">
                   <h3 class="card-title">DÓNDE ESTAMOS?</h3>
                   <p class="card-text">Visitános, trabaja con nosotros o comunicate. </p>
-                  <a href="./pages/sobre nosotros.html" class="btn btn-custom">Encontrános</a>
+                  <a href="./pages/encontranos.html" target="_blank"  class="btn btn-custom">Encontrános</a>
          </div>
 
          </section>
